test/libsolidity/syntaxTests/constructor/library_constructor.sol
library Lib {
	constructor();
}
// ----
// TypeError 7634: (15-29): Constructor cannot be defined in libraries.
// TypeError 5700: (15-29): Constructor must be implemented if declared.
